--- a/scraps-tmp.ipynb
+++ b/scraps-tmp.ipynb
@@ -5,7 +5,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = [0,1,2,3,4,5,6]\n",
+    "b = [1,2,3,4,5,6,7]\n",
+    "c = [0,1,2,3,4,5,6]\n",
+    "outliers = ['a','b','c']\n",
+    "\n",
+    "d = pd.DataFrame({'a':a,'b':b,'c':c})\n",
+    "qs = d.quantile(.25)\n",
+    "for i in range(0,len(qs)):\n",
+    "  col = outliers[i]\n",
+    "  q = qs[i]\n",
+    "  outlier_rows = (d[col] <= q)\n",
+    "  print(outlier_rows)\n",
+    "  d = d[~outlier_rows]\n",
+    "  print(d)\n",
+    "  print()\n",
+    "qs"
+   ]
   }
  ],
  "metadata": {
