--- a/TP4.ipynb
+++ b/TP4.ipynb
@@ -2629,6 +2629,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#from ISLP import load_data\n",
+    "import os  \n",
+    "import pandas as pd\n",
+    "import numpy as np \n",
+    "import matplotlib.pyplot as plt  \n",
+    "import statsmodels.api as sm     \n",
+    "\n",
+    "from sklearn import datasets\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import accuracy_score, recall_score \n",
+    "from sklearn.metrics import roc_curve\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "from sklearn.metrics import RocCurveDisplay\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "\n",
+    "from sklearn.model_selection import KFold\n",
+    "\n",
+    "\n",
+    "\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import BaggingRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "from sklearn.ensemble import AdaBoostRegressor \n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2649,6 +2693,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evalua_metodo(modelo, X_train, X_test, Y_train, Y_test):\n",
+    "    '''\n",
+    "    Esta función toma como argumentos (como lo indica la consigna) un modelo y los correspondientes datos. Para la función evaluar\n",
+    "    cada modelo, especificamos distintas métricas (utilizamos las mismas que en el TP2). Le pedimos que el producto de la función\n",
+    "    sea un Data Frame que resuma estas metricas para el/los modelo/s que vayamos a evaluar.\n",
+    "    '''\n",
+    " \n",
+    "    model = modelo\n",
+    "    model.fit(X_train, Y_train)\n",
+    "    y_pred_modelo = model.predict(X_test)\n",
+    "    matriz_confusion = confusion_matrix(Y_test, y_pred_modelo)\n",
+    "    tn, fp , fn, tp = confusion_matrix(Y_test, y_pred_modelo).ravel()\n",
+    "    specificity = tn / (tn+fn)\n",
+    "    accuracy = accuracy_score(Y_test, y_pred_modelo)\n",
+    "    recall= recall_score(Y_test, y_pred_modelo)\n",
+    "    precision = tp/(tp + fp)\n",
+    "    auc= roc_auc_score(Y_test, y_pred_modelo)\n",
+    "    ecm = mean_squared_error(Y_test, y_pred_modelo)\n",
+    "    \n",
+    "    df_metrics = pd.DataFrame({'modelo': [model], 'accuracy': [accuracy], 'auc':[auc], 'ecm':[ecm], 'precision': [precision], 'recall': [recall], 'specificity': [specificity], 'true negatives': [tn], 'true positives': [tp], 'false negatives': [fn], 'false positives': [fp]})\n",
+    "\n",
+    "    return df_metrics"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2657,11 +2731,84 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cross_validation(modelo, K, X, Y, standard=True):\n",
+    "    '''\n",
+    "    Esta función toma como argumentos un modelo, K que es la cantidad de particiones que queremos hacerle a la muestra, los \n",
+    "    respectivos datos X e Y y un arguemnto para standarizar nuestros regresores. Primero, llamamos a la función Kfold para\n",
+    "    realizar la particiones, luego  iteramos a través de las particiones y realizamos la validación cruzada. Luego llamamos,\n",
+    "    a la función evalua_metodo para evaluar los distintos modelos surgidos a partir de las particiones. De todas las metricas,\n",
+    "    definidas en la función evaluar_metodo nos quedamos con el ecm, tambien calculamos el ecm_promedio que es la media del ecm\n",
+    "    para todas las particiones. El return de la funcion es una lista con los ecm de cada particion y el promedio de todas estas.\n",
+    "    '''\n",
+    "    ecm_scores = []\n",
+    "        \n",
+    "    sc = StandardScaler()\n",
+    "    kf = KFold(n_splits=K, shuffle=True, random_state=63)\n",
+    "    \n",
+    "    for train_index, test_index in kf.split(X):\n",
+    "        X_train, X_test = X.iloc[train_index], X.iloc[test_index]\n",
+    "        Y_train, Y_test = Y.iloc[train_index], Y.iloc[test_index]\n",
+    "        \n",
+    "        if standard:\n",
+    "                X_train = sc.fit_transform(X_train)\n",
+    "                X_test = sc.transform(X_test)\n",
+    "          \n",
+    "\n",
+    "        df_metrics = evalua_metodo(modelo, X_train, X_test, Y_train, Y_test)\n",
+    "        ecm = df_metrics['ecm'].values[0] \n",
+    "        ecm_scores.append(ecm)\n",
+    "\n",
+    "    ecm_promedio = np.mean(ecm_scores)\n",
+    "\n",
+    "    return ecm_scores, ecm_promedio\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 3\n",
     " Escriban una función, llamada evalua config que reciba una lista de configuraciones de hiperparámetros (los distintos valores a probar como hiperparámetros podrian codificarse en diccionarios de Python) y utilizando la función cross validation obtenga el error2 promedio para cada configuración. Finalmente, la función debe devolver la configuración que genere menor error. Asegúrense de que esta funci ón sirva para cualquier hiperparámetro que quieran elegir por crossvalidation para cualquier modelo. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evalua_config(hiperparametros, X, Y, K):\n",
+    "    '''\n",
+    "    Esta funcion lo que hace es que para un/os valor/es para los hiperparametros lambda y una penalidad (Ridge = l2, Lasso = l2\n",
+    "    , elastic net = elastic net) corra un modelo Logit y le haga una validación cruzada (llamando la función definida \n",
+    "    previamente). Finalmente en una lista almacena el ecm promedio para cada modelo posible (partición-penalidad-hiperparametro)\n",
+    "    y los almacena en un diccionario. Donde la key es el hiperparametro y el value es el ecm_promedio. Finalmente, calculamos \n",
+    "    para cada hiperparamtetro, cual es el que tiene el menor ecm_promedio. La función nos  devuelve este diccionario y el \n",
+    "    mejor hiperparametro.\n",
+    "    '''\n",
+    "    errores_promedio = {}\n",
+    "    modelos = []\n",
+    "    for hiperparametro in hiperparametros:\n",
+    "\n",
+    "        C = 1 / hiperparametro\n",
+    "        modelos.append(LogisticRegression(C=C, penalty=penalty, solver= 'saga', max_iter = 100))\n",
+    "        modelos.append(DecisionTreeRegressor(max_depth = hiperparametro))\n",
+    "        modelos.append(BaggingRegressor(n_estimators=hiperparametro, max_samples=200, random_state=100)) \n",
+    "        modelos.append(RandomForestRegressor(n_estimators=hiperparametro, max_samples=200, max_features=9, random_state=1))\n",
+    "\n",
+    "        for i in range(0,len(modelos)):\n",
+    "            modelo = modelos[i]\n",
+    "            ecm_scores, ecm_promedio = cross_validation(modelo, K, X, Y, standard=True)\n",
+    "            errores_promedio[i][hiperparametro] = ecm_promedio\n",
+    "\n",
+    "    mejor_hiperparametro = min(errores_promedio, key=errores_promedio.get)\n",
+    "\n",
+    "    return errores_promedio, mejor_hiperparametro\n"
    ]
   },
   {
@@ -2677,6 +2824,68 @@
     " - Bagging\n",
     " - Random Forests\n",
     " - Boosting\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evalua_multiples_metodos(K, X_train, X_test , Y_train, Y_test, X, Y, hiperparametro, k_knn,  modelos = ['Logit', 'KNN', 'LDA', 'CART', 'Random Forest', 'Boosting', 'Bagging']\n",
+    "):\n",
+    "    '''\n",
+    "    Esta función lo que hace es que para una lista de posibles modelos, le aplica la función evalua_metodos a cada uno de los\n",
+    "    elementos de la lista. Luego genera una lista de resultados asociados a lo que hace la función evalua_metodo y los adjunta \n",
+    "    en una tabla que dicho sea de paso es el return del modelo en el que podemos aprecias distintas metricas para cada modelo.\n",
+    "    '''\n",
+    "    tabla_comparativa = pd.DataFrame(columns=[\"Modelo\", \"Hiperparametro\",\"Accuracy\", \"AUC\", \"Precision\", \"Specificity\", \"Recall\", \"ECM\"])\n",
+    "    for modelo in modelos:\n",
+    "        if modelo == 'Logit':\n",
+    "             #hiperparametro landa\n",
+    "            metricas_log= evalua_metodo(LogisticRegression(C=1/hiperparametro, penalty=penalty, solver = 'saga'), X_train, X_test, Y_train, Y_test)\n",
+    "            resultados = [modelo, hiperparametro, metricas_log['accuracy'][0], metricas_log['auc'][0], metricas_log['precision'][0], \n",
+    "                       metricas_log['specificity'][0],  metricas_log['recall'][0],  metricas_log['ecm'][0]]\n",
+    "            tabla_comparativa.loc[len(tabla_comparativa)] = resultados\n",
+    "\n",
+    "        elif modelo == 'KNN':\n",
+    "            metricas_knn = evalua_metodo(KNeighborsClassifier(n_neighbors=k_knn), X_train, X_test, Y_train, Y_test)\n",
+    "            resultados = [modelo, k_knn, metricas_knn['accuracy'][0], metricas_knn['auc'][0], metricas_knn['precision'][0], \n",
+    "                       metricas_knn['specificity'][0],  metricas_knn['recall'][0],  metricas_knn['ecm'][0]]\n",
+    "            tabla_comparativa.loc[len(tabla_comparativa)] = resultados\n",
+    "\n",
+    "        elif modelo == 'LDA':\n",
+    "            metricas_lda = evalua_metodo(LinearDiscriminantAnalysis(), X_train, X_test, Y_train, Y_test)\n",
+    "            resultados = [modelo, 'NA', metricas_lda['accuracy'][0], metricas_lda['auc'][0], metricas_lda['precision'][0], \n",
+    "                       metricas_lda['specificity'][0],  metricas_lda['recall'][0],  metricas_lda['ecm'][0]]\n",
+    "            tabla_comparativa.loc[len(tabla_comparativa)] = resultados\n",
+    "\n",
+    "        elif modelo == 'CART':\n",
+    "            metricas_lda = evalua_metodo(LinearDiscriminantAnalysis(), X_train, X_test, Y_train, Y_test)\n",
+    "            resultados = [modelo, 'NA', metricas_lda['accuracy'][0], metricas_lda['auc'][0], metricas_lda['precision'][0], \n",
+    "                       metricas_lda['specificity'][0],  metricas_lda['recall'][0],  metricas_lda['ecm'][0]]\n",
+    "            tabla_comparativa.loc[len(tabla_comparativa)] = resultados\n",
+    "\n",
+    "        elif modelo == 'Random Forest':\n",
+    "            metricas_lda = evalua_metodo(LinearDiscriminantAnalysis(), X_train, X_test, Y_train, Y_test)\n",
+    "            resultados = [modelo, 'NA', metricas_lda['accuracy'][0], metricas_lda['auc'][0], metricas_lda['precision'][0], \n",
+    "                          metricas_lda['specificity'][0],  metricas_lda['recall'][0],  metricas_lda['ecm'][0]]\n",
+    "            tabla_comparativa.loc[len(tabla_comparativa)] = resultados\n",
+    "\n",
+    "        elif modelo == 'Boostin':\n",
+    "            metricas_lda = evalua_metodo(LinearDiscriminantAnalysis(), X_train, X_test, Y_train, Y_test)\n",
+    "            resultados = [modelo, 'NA', metricas_lda['accuracy'][0], metricas_lda['auc'][0], metricas_lda['precision'][0], \n",
+    "                          metricas_lda['specificity'][0],  metricas_lda['recall'][0],  metricas_lda['ecm'][0]]\n",
+    "            tabla_comparativa.loc[len(tabla_comparativa)] = resultados\n",
+    "        \n",
+    "        elif modelo == 'Bagging':\n",
+    "            metricas_lda = evalua_metodo(LinearDiscriminantAnalysis(), X_train, X_test, Y_train, Y_test)\n",
+    "            resultados = [modelo, 'NA', metricas_lda['accuracy'][0], metricas_lda['auc'][0], metricas_lda['precision'][0], \n",
+    "                          metricas_lda['specificity'][0],  metricas_lda['recall'][0],  metricas_lda['ecm'][0]]\n",
+    "            tabla_comparativa.loc[len(tabla_comparativa)] = resultados\n",
+    "\n",
+    "\n",
+    "    return(tabla_comparativa)"
    ]
   },
   {
@@ -2764,7 +2973,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
