Corrección de comentarios

--- a/TP4_final.ipynb
+++ b/TP4_final.ipynb
@@ -381,11 +381,11 @@
     "suffixes = {'_H': {}, '_I': {}}\n",
     "cols_w_suffix = set()\n",
     "\n",
-    "# Buscamos columnas con sufijos\n",
+    "# Find columns with suffixes\n",
     "for suffix in list(suffixes.keys()):\n",
     "    cols_w_suffix.update(col[:-len(suffix)] for col in df_EPH_AMBA.columns if col.endswith(suffix))\n",
     "\n",
-    "# Creamos listas con diccionarios para operaciones\n",
+    "# Create lists and dictionaries for operations\n",
     "columns_to_drop = []\n",
     "columns_to_rename = {}\n",
     "columns_different= []\n",
