--- a/TP4_final.ipynb
+++ b/TP4_final.ipynb
@@ -11153,7 +11153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Parte 2 Construcción de funciones\n",
+    "## Parte 2 - Construcción de funciones\n",
     "El objetivo de esta parte del trabajo es revisar y mejorar el código que escribieron\n",
     "en la parte II del TP3. Deben buscar que sea flexible y esté modularizado (en funciones\n",
     "bien documentadas con docstrings). De esta forma, evitarán repetir código y podrán\n",
